<resources>
    <string name="app_name">JHotel_Android_Rizky</string>
    <string name="email_String">E-Mail</string>
    <string name="password_String">Password</string>
    <string name="button_Login">Login</string>
    <string name="button_Register">Register</string>
    <string name="fullname_String">Full Name</string>
    <string name="static_RoomNumber">Room Number:</string>
    <string name="static_Tariff">Tariff:</string>
    <string name="static_Durasi">Durasi:</string>
    <string name="static_Total">Total:</string>
</resources>
