<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuatPesananActivity">

    <TextView
        android:id="@+id/staticRoomNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="95dp"
        android:text="@string/static_RoomNumber"
        app:layout_constraintBottom_toTopOf="@+id/staticTariff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/staticTariff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="124dp"
        android:text="@string/static_Tariff"
        app:layout_constraintBottom_toTopOf="@+id/staticDurasi"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/staticDurasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="120dp"
        android:text="@string/static_Durasi"
        app:layout_constraintBottom_toTopOf="@+id/staticTotal"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/staticTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="260dp"
        android:layout_marginStart="124dp"
        android:text="@string/static_Total"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/room_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="121dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="96dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/tariff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/staticRoomNumber"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tariff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="121dp"
        android:layout_marginStart="42dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/durasi_hari"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/staticTariff" />

    <EditText
        android:id="@+id/durasi_hari"
        android:layout_width="77dp"
        android:layout_height="36dp"
        android:layout_marginBottom="19dp"
        android:layout_marginEnd="102dp"
        android:layout_marginStart="42dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toTopOf="@+id/total_biaya"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/staticDurasi" />

    <TextView
        android:id="@+id/total_biaya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="260dp"
        android:layout_marginEnd="121dp"
        android:layout_marginStart="45dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/staticTotal" />

    <Button
        android:id="@+id/hitung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:text="Hitung"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/staticTotal" />

    <Button
        android:id="@+id/pesan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="78dp"
        android:layout_marginTop="39dp"
        android:text="Pesan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hitung" />
</android.support.constraint.ConstraintLayout>